Cherry-pick r288362. rdar://problem/87832940

WPT version of css/css-cascade/parsing/layer-import-parsing.html crashes with nullptr
    https://bugs.webkit.org/show_bug.cgi?id=235434
    rdar://87832940

    Reviewed by Alan Bujtas.

    LayoutTests/imported/w3c:

    * web-platform-tests/css/css-cascade/parsing/layer-import-parsing.html:

    Update to WPT version.

    Source/WebCore:

    Test: fast/css/insert-import-rule-crash.html

    * css/StyleRuleImport.cpp:
    (WebCore::StyleRuleImport::setCSSStyleSheet):

    Null check the parent stylesheet. It can be null if the rule has been removed.

    * dom/InlineStyleSheetOwner.cpp:
    (WebCore::InlineStyleSheetOwner::startLoadingDynamicSheet):

    Also fix a debug assert in addPendingSheet, this can get called multiple times.

    LayoutTests:

    * fast/css/insert-import-rule-crash-expected.txt: Added.
    * fast/css/insert-import-rule-crash.html: Added.

    Canonical link: https://commits.webkit.org/246266@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288362 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.111@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@289291 268f45cc-cd09-0410-ab3c-d52691b4dbfc